<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backSettings">

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/autoTextChange"
        android:textColor="@color/btnColor"
        android:id="@+id/chAutoSlide" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/etTime"
            android:layout_weight="1"
            android:textColor="@color/btnColor"
            android:inputType="number"
            android:imeOptions="actionDone"
            android:text="30" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/textInterval"
            android:id="@+id/textView"
            android:layout_weight="1"
            android:textColor="@color/btnColor" />
    </LinearLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textOnlyFavorites"
        android:id="@+id/chFavorites"
        android:textColor="@color/btnColor" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shuffle"
        android:id="@+id/chShuffle"
        android:textColor="@color/btnColor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/animationType"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/btnColor" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_gravity="center_horizontal" />

</LinearLayout>